Добавлен проект для тестирования

--- a/2048_game_2023/2048_game_2023.vcxproj.filters
+++ b/2048_game_2023/2048_game_2023.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="functions.h">
       <Filter>Исходные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="pch.h">
+      <Filter>Исходные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
